--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,13 @@
             <artifactId>spark-streaming-twitter_2.11</artifactId>
             <version>2.2.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka -->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.11</artifactId>
+            <version>0.11.0.1</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
